Changed the order of the faculty list in the html file with permission from Nic. Then we fixed the pictures and alignment to our liking.

--- a/css/style2.css
+++ b/css/style2.css
@@ -8,10 +8,10 @@ use float to make something locate itself on the right or left
 */
 
 body{
-    padding: 30px;
-    background-color: #ace2ad;
-    color: #2d74e5;
-    font-family: "Verdana", sans-serif;
+  padding: 30px;
+  background-color: #ace2ad;
+  color: #2d74e5;
+  font-family: "Verdana", sans-serif;
 }
 
 #main-title{
@@ -21,9 +21,23 @@ body{
 
 }
 
+#faculty1{
+  text-align: center;
+}
+
+#faculty1>ul>li {
+  display: inline-block;
+  font-family: "Verdana", sans-serif;
+  text-align: center;
+}
+
+#faculty-list1 {
+  padding-left: 0
+}
+
 #pslo {
   margin-left: 2px;
-  padding: 0px;
+  padding: 0;
   font-size: 18px;
 }
 
@@ -35,7 +49,7 @@ body{
 }
 #courses{
   margin-right: 2px;
-  padding: 0px;
+  padding: 0;
 }
 
 @media screen and (min-width: 850px) {
@@ -50,8 +64,18 @@ h2{
   font-size: 25px;
 }
 
-#faculty{
+#faculty2{
+  text-align: center;
+}
 
+#faculty2>ul>li {
+  display: inline-block;
+  font-family: "Verdana", sans-serif;
+  text-align: center;
+}
+
+#faculty-list2 {
+  padding-left: 0
 }
 
 
